--- a/system_id/system_id.tex
+++ b/system_id/system_id.tex
@@ -19,7 +19,7 @@
         System identification is then reduced to parameter estimation to determine values for the parameters used in die model.
         
         \paragraph{} 
-        This is the approach used by \cite{erasmus} and \cite{slabber} for swing damping control of a quadrotor with an unknown suspended payload.
+        This is the approach used by \cite{Erasmus2019} and \cite{Slabber2020} for swing damping control of a quadrotor with an unknown suspended payload.
         The system was modelled as two rigid bodies connected by a link and the following assumptions were made regarding the suspended payload:
         \begin{itemize}
             \item The payload is a point mass.
@@ -33,7 +33,7 @@
 
         \paragraph{} 
         The approach works well for systems with predictable dynamics, but it is not very adaptable.
-        The payload considered by \cite{erasmus} and \cite{slabber} is limited to a small rigid mass suspended from the quadrotor by a non-stretching cable. 
+        The payload considered by \cite{Erasmus2019} and \cite{Slabber2020} is limited to a small rigid mass suspended from the quadrotor by a non-stretching cable. 
         In this use case it was shown that a LQR controller successfully controls a quadrotor while minimising payload swing angles.
         However, if a payload or cable is used that violates one of the modelling assumptions, the predefined model no longer accurately represent the system.
         Since the controller is dependent on this model, the mismatch between the model and actual dynamics may result in undesirable controller behaviour.
@@ -95,61 +95,124 @@
         Therefore there is value in low-complexity, linear models since these may be simple enough to execute on low cost hardware.
         trade-off between accuracy and complexity.
         Non-linear models may require control implementations that are too computationally expensive and may not be practically realisable on the available hardware on a quadrotor.
-
+        
+        \paragraph{}
         DMDc and HAVOK are the two data-driven system identification methods investigated in this paper. 
         These are linear regression techniques that produce a linear model to approximate non-linear dynamics.
         Non-linear data-driven techniques like Neural Networks and SINDy \cite{Brunton2016} may produce models that are more accurate, however they have greater computational complexity.
         DMDc and HAVOK are less computationally complex and their models are suitable for linear MPC, which is significantly faster than non-linear MPC.
         This is desirable for a RUAV use case, where onboard computational power is limited.
-    
-    \subsection{System Identification Procedure}
-        ?? do correct numbering
-        1. Takeoff and hover 
-        2. Command a series of velocity step inputs with random step sizes and time intervals
-        3. Measure and save input and output data
-        4. Apply algorithm to data and generate model
         
-    \subsection{Dynamic Mode Decomposition with Control} \label{sec:dmdc}
-
         \paragraph{}
-        DMD is a linear regression technique that is used here to approximate a non-linear dynamical system \cite{Tu2014}.
-        It only uses temporal measurements to reconstruct the system dynamics, with no prior modelling assumptions.
-        DMDc is an adaptation of DMD that also accounts for control \cite{Proctor2016}.
+        These techniques and their implementation are explained in the sections below.
+        Each technique is considered for use in a velocity controller in the North direction
 
-        \paragraph{}
-        This section provides an overview of the specific implementation of DMDc used in this paper.
+    \subsection{System Identification Procedure}
+
+        \begin{enumerate}
+            \item Takeoff and hover
+            \item Command a series of velocity step inputs with random step sizes and time intervals
+            \item Measure and save input and output data
+            \item Apply algorithm to data and generate model
+        \end{enumerate}
+
+
+        
+    \subsection{Dynamic Mode Decomposition with Control}
+    \label{sec:dmdc}        
+
+        \murray{remember to cite CCA paper if published}
+        
+        \paragraph{Intro}        
+        DMD is a linear regression technique that can be used to approximate a non-linear dynamical system \cite{Tu2014}.
+        DMD uses temporal measurements of system outputs to reconstruct system dynamics without prior modelling assumptions.
+        DMDc is an adaptation of DMD that also accounts for control inputs \cite{Proctor2016c}.
+        This section provides an overview of the specific implementation of DMDc used in this paper.        
         Note that this implementation is a slight adaptation of DMDc, and includes time-delay-embedding of multiple observables. 
-        \cite{Korda2018} and \cite{Arbabi2017} use time-delay-embedding in their DMD adaptions in similar ways.
+        \cite{Korda2018b} and \cite{Arbabi2018} use time-delay-embedding in their DMD adaptions in similar ways.
 
         \paragraph{}
-        Only the non-velocity observables,
-        $\bm{y} = \begin{bmatrix}
-            x_Q & z_Q & \theta & \beta
-        \end{bmatrix}^T$,
-        of the 2D RUAV and payload system are used in this implementation.
-        The algorithm produces a linear, discrete state-space model.
-        Therefore discrete instances, $\bm{y}_k$, of the continuous time observable, $\bm{y}(t)$, are used, where $\bm{y}_k = \bm{y}(k T_s)$, and $T_s$ is the sampling time of the model.    
-        Delay-coordinates (i.e. $\bm{y}_{k-1}, \bm{y}_{k-2}$, etc.) are also included in the state-space model.
-        Hence, we define an extended state vector as:
+        % As discussed in \ref{sec:linear_model}, the payload has minimal effect on quadrotor attitude because it is attached near the CoM of the vehicle.
+        % Therefore the attitude states are excluded from the system identification model.
+        The model identified by DMDc will be used to design a longitudinal velocity controller.
+        As shown in \ref{fig:system_id_plant}, the plant considered for system identification includes the dynamics of the inner loop, attitude controllers.
+        The swing damping controllers which will utilise the identified model act only in the translational velocity loop.
+        Because of the large time-scale separation between the inner and outer loop controllers, 
+        the attitude states have a negilable effect on the plant dynamics seen by the velocity controller.
+        As discussed in \ref{sec:linear_model}, the payload has minimal effect on the quadrotor attitude because it is attached near the CoM of the vehicle.
+        Therefore the attitude states are excluded from the system identification model.
+
+        \begin{figure}[h]
+            \centering
+        %     \includegraphics[width=\linewidth]{cae_siamese}
+            \includegraphics[width=0.5\linewidth]{floating_pend.png}            
+            \caption{Floating pendulum model considered for system identification for a North velocity controller}
+            \label{fig:floating_pend}
+        \end{figure}
+
+        \paragraph{}
+        Figure \ref{fig:floating_pend} shows the resulting model considered for system identification.
+        In Chapter \ref{chap:modelling} the differential equations that describe the motion of this system are derived with Lagrangian mechanics.
+        From these equations it is clear that the considered plant is defined by the state vector,
         \begin{equation}
-            \bm{a}_{k} = \begin{bmatrix} \bm{y}_{k-(q-1)} & \cdots & & \bm{y}_{k-1} & & \bm{y}_{k} \end{bmatrix}^T ,
+            \bm{x} = \begin{bmatrix}
+                V_N & \dot{\theta}
+            \end{bmatrix}^T,
         \end{equation}
-        where $\bm{a}_k \in \R^{(n_y)(q)}$, and the subscript of $\bm{a}$ denotes the highest subscript of ${\bm{y}}$ in the vector.
-        The state-space model is therefore defined as:
+        and the input vector,
+        \begin{equation}
+            \bm{u} = \begin{bmatrix}
+                A_{N,sp}
+            \end{bmatrix},
+        \end{equation}
+
+        % From this derivation it is clear that the angular velocity of the payload, $\dot{\theta}$, is required to described the system dynamics.
+        % However, $\dot{\theta}$ is not measured directly on the considered practical quadrotor setup.
+        % Instead, the payload angle, $\theta$, is measured by a potentiometer attached to a DAC on Honeybee as described in Chapter \ref{chap:system_overview}.
+        % As expected, this measurement is extremely noisy.
+        % \murray{Maybe insert figure to show noise}
+        % % Figure \ref{} shows the angle measurement during a practical experiment of the payload while Honeybee is held stationary
+        % Numerical differentiation is applied to the noisy $\theta$ signal which results in a very inaccurate estimation of $\dot{\theta}$.
+        % Therefore it is desirable to rather use $\theta$ in the system identification process.
+
+        \paragraph{}
+        DMD produces a linear, discrete state-space model of the system dynamics.
+        Discrete measurements, $\bm{x}_k$, of the continuous time observable, $\bm{x}(t)$, are used, 
+        where $\bm{x}_k = \bm{x}(k T_s)$, and $T_s$ is the sampling time of the model.    
+        Delay-coordinates (i.e. $\bm{x}_{k-1}, \bm{x}_{k-2}$, etc.) are also included in the state-space model to
+        account for input delay and state delay in the system.
+        Input delay refers to the time delay involved with transporting a control signal to a system, 
+        whereas state delay refers to time-separated interactions between system variables \cite{Chen1999}.
+        Hence, we define an state delay vector as:
+        \begin{equation}
+            \bm{d}_{k} = 
+            \begin{bmatrix}
+                \bm{x}_{k-1} & \bm{x}_{k-2} & \cdots & \bm{x}_{k-q}
+            \end{bmatrix}^T ,
+        \end{equation}
+        $\bm{d}_k \in \R^{(n_x)(q)}$ and where $q$ is the number of delay-coordinates included in the model.
+
+        \murray{q = number of delays from here up}
+        \paragraph{}
+        The discrete state-space model is therefore defined as:
         \begin{equation} \label{eq:dmd_state_space}
-            \bm{a}_{k+1} = \bm{A} \bm{a}_k + \bm{B} \bm{u}_k ,
+            \bm{x}_{k+1} = \bm{A} \bm{x}_k + \bm{A}_1 \bm{d}_k + \bm{B} \bm{u}_k ,
         \end{equation}
-        where \( \bm{u}_k \in \R^{n_u} \) is the input vector at the current time-step, 
-        \( \bm{A} \in \R^{(q \cdot n_y) \times (q \cdot n_y)} \) is the system matrix and \( \bm{B} \in \R^{(q \cdot n_y) \times n_u} \) is the input matrix.
-        The training data consists of discrete measurements, $\bm{y}_k$, and corresponding inputs, $\bm{u}_k$, taken at regular intervals of $\Delta t = T_s$, during a simulated flight. 
+        \( \bm{A} \in \R^{n_x \times n_x} \) is the system matrix, 
+        \( \bm{A}_1 \in \R^{(q \cdot n_x) \times (q \cdot n_x)} \) is the state delay system matrix and 
+        \( \bm{B} \in \R^{n_x \times n_u} \) is the input matrix.
+        
+        \paragraph{}
+        The training data consists of full-state measurements, $\bm{x}_k$, and corresponding inputs, $\bm{u}_k$, 
+        taken at regular intervals of $\Delta t = T_s$, during a simulated flight. 
         The training data is collected into the following matrices:
         \begin{align} \label{eq:dmd_matrices}
             \bm{X} \phantom{'} = & \left [
                 \begin{array}{*{5}{@{}M{\mycolwd}@{}}}
-                        \bm{y}_1 & \bm{y}_2 & \bm{y}_3 & \cdots & \bm{y}_{w} \\
-                        \bm{y}_2 & \bm{y}_3 & \bm{y}_4 & \cdots & \bm{y}_{w+1} \\
+                        \bm{x}_1 & \bm{x}_2 & \bm{x}_3 & \cdots & \bm{x}_{w} \\
+                        \bm{x}_2 & \bm{x}_3 & \bm{x}_4 & \cdots & \bm{x}_{w+1} \\
                         \vdots   & \vdots   & \vdots   & \ddots & \vdots \\
-                        \bm{y}_{q} & \bm{y}_{q+1} & \bm{y}_{q+2} & \cdots & \bm{y}_{w+q-1}
+                        \bm{x}_{q} & \bm{x}_{q+1} & \bm{x}_{q+2} & \cdots & \bm{x}_{w+q-1}
                 \end{array}
             \right ] , \nonumber \\
             = & \phantom{.} \left [
@@ -206,7 +269,7 @@
             \bm{G} = \begin{bmatrix} \bm{A} & \bm{B} \end{bmatrix}.
         \)
          
-        Since the state vector, $\bm{a}$, includes delay-coordinates, some matrix entries are known a priori and are independent of the dynamics. For example, the values of $\bm{y}_{k}$ should be mapped from their position in $\bm{a}_k$ to specific indices in $\bm{a}_{k+1}$. Due to the least-squares fitting and coordinate transformation, DMDc will not produce these exact values in $\bm{A}$ and $\bm{B}$. By forcing each of these matrix entries to 1 or 0, the state-prediction performance of the model is improved.
+        Since the state vector, $\bm{a}$, includes delay-coordinates, some matrix entries are known a priori and are independent of the dynamics. For example, the values of $\bm{x}_{k}$ should be mapped from their position in $\bm{a}_k$ to specific indices in $\bm{a}_{k+1}$. Due to the least-squares fitting and coordinate transformation, DMDc will not produce these exact values in $\bm{A}$ and $\bm{B}$. By forcing each of these matrix entries to 1 or 0, the state-prediction performance of the model is improved.
 
         \subsection{Hankel Alternative View Of Koopman}
 % 
@@ -221,8 +284,8 @@
         \bm{a}_{k+1} = \Tilde{\bm{A}} \bm{a}_k + \Tilde{\bm{B}} \bm{u}_k ,
     \end{equation}
     where $\bm{a}_k$ is the state vector previously defined in Section \ref{sec:dmdc}, 
-    \( \Tilde{\bm{A}} \in \R^{(q \cdot n_y) \times (q \cdot n_y)} \) is the system matrix, 
-    and \( \Tilde{\bm{B}} \in \R^{(q \cdot n_y) \times n_u} \) is the input matrix. 
+    \( \Tilde{\bm{A}} \in \R^{(q \cdot n_x) \times (q \cdot n_x)} \) is the system matrix, 
+    and \( \Tilde{\bm{B}} \in \R^{(q \cdot n_x) \times n_u} \) is the input matrix. 
     Here, $\Tilde{\phantom{a}}$ is used to differentiate these matrices from $\bm{A}$ and $\bm{B}$ used in DMDc.
     % 
     \paragraph{}
